ingress/fi-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: n8n-fi
  namespace: n8n-fi
spec:
  hosts:
    - fi.ea58fe1.kyma.ondemand.com
  gateways:
    - kyma-system/kyma-gateway
  http:
    - match:
        - uri:
            prefix: /webhook-waiting
        - uri:
            prefix: /form-waiting
        - uri:
            prefix: /webhook
        - uri:
            prefix: /form
        - uri:
            prefix: /mcp
      route:
        - destination:
            host: n8n-fi-webhook-processor
            port:
              number: 5678
    - route:
        - destination:
            host: n8n-fi-main
            port:
              number: 5678
